finalmente trovato il modo per fare il login

--- a/src/app/registrazione/registrazione.component.html
+++ b/src/app/registrazione/registrazione.component.html
@@ -1,1 +1,8 @@
-<p>registrazione works!</p>
+<p>    nome utente: <input type="text" [(ngModel)]="username">
+</p>
+<p>
+    password: <input type="password" [(ngModel)]="password">
+</p>
+<button (click)="abilita()">
+    {{testoBottone}}
+</button>
