miglioramento comp. alunno cercato di fare graf

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a routerLink="/autentica" >Login </a>
+    <a routerLink="/registro" >Registro </a>
 <router-outlet></router-outlet>
 </body>
 </html>
