--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -9,23 +9,18 @@
 <body>
 <table>
 <thead>
-    <th class="idC">id</th>
-    <th class="studenteC">studente</th>
-    <th class="votiC">voti</th>
+    <th >id</th>
+    <th >studente</th>
+    <th >voti</th>
 </thead>
 <tbody *ngFor="let studente of servizio.elencoStudenti; let i = index">
-    <td class="idR">{{studente.id}}</td>
-    <button (click)="selezione(i)" routerLink="/alunno"><td class="studenteR">{{studente.nome}} {{studente.cognome}}<br>{{studente.nascita}}</td></button>
-    <td class="votiR"><span *ngFor="let x of studente.voti" >{{x}},</span>
+    <td class=>{{studente.id}}</td>
+    <button (click)="selezione(i)" routerLink="/alunno"><td>{{studente.nome}} {{studente.cognome}}<br>{{studente.nascita}}</td></button>
+    <td ><span *ngFor="let x of studente.voti" >{{x}} | </span>
         <select [(ngModel)] = selettore[i]>
-        <option>10</option>
-        <option>9</option>
-        <option>8</option>
-        <option>7</option>
-        <option>6</option>
-        <option>5</option>
-        <option>4</option>
-        <option>3</option>
+
+        <option *ngFor="let i of votii">{{i}}</option>
+
       </select><button type="button" *ngIf="selettore[i] != null" (click)="addVoto(i)">+</button></td>
 </tbody>
 </table>
