--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start</title>
 </head>
 <body>
-    <a routerLink="/autentica" >Login </a>
-    <a routerLink="/registro" >Registro </a>
-<router-outlet></router-outlet>
+    <div class="text-center">    
+        
+
+<div class="row d-flex justify-content-center ">
+
+    <div class="col d-flex justify-content-center">
+        <nav class="nav nav-pills">
+            <a type="button" class="nav-link btn btn-outline-warning col-xs-2" routerLink="/autentica" >Login</a>
+            <a *ngIf="ss.autorizzato" type="button" class=" nav-link btn btn-outline-warning col-xs-2" routerLink="/registro">registro</a>
+          </nav></div>
+  
+        <router-outlet></router-outlet>
+  
+    </div>
+  
+  </div>
+
+
 </body>
 </html>
 
